# platform.core.pim.pims-ipc

./: CMakeLists.txt  LICENSE.APLv2  NOTICE  pims-ipc.manifest  pims-ipc.manifest.in  pims-ipc.pc.in  project.config
include/: pims-ipc-data.h  pims-ipc-svc.h  pims-ipc-types.h  pims-ipc.h
packaging/: pims-ipc.changes  pims-ipc.spec
src/: pims-debug.h  pims-internal.h  pims-ipc-data-internal.h  pims-ipc-data.c  pims-ipc-pubsub.c  pims-ipc-pubsub.h  pims-ipc-svc.c  pims-ipc-utils.c  pims-ipc-utils.h  pims-ipc-worker.c  pims-ipc-worker.h  pims-ipc.c  pims-socket.c  pims-socket.h
test/: CMakeLists.txt  sock-test.c  test.c
